stuf/src/p5/tests/t011.err
Semantic error on line 15: Cannot += an expression of type 'double' to a variable of type 'int'.
Semantic error on line 16: Cannot += an expression of type 'string' to a variable of type 'int'.
Semantic error on line 17: Cannot += an expression of type 'circle' to a variable of type 'int'.
Semantic error on line 23: Cannot += an expression of type 'string' to a variable of type 'double'.
Semantic error on line 24: Cannot += an expression of type 'circle' to a variable of type 'double'.
Semantic error on line 30: Cannot += an expression of type 'circle' to a variable of type 'string'.
Semantic error on line 36: LHS of plus-assignment must be (INT || DOUBLE || STRING).  Variable 'lhs_triangle' is of type 'triangle'.
Semantic error on line 37: LHS of plus-assignment must be (INT || DOUBLE || STRING).  Variable 'lhs_triangle' is of type 'triangle'.
Semantic error on line 38: LHS of plus-assignment must be (INT || DOUBLE || STRING).  Variable 'lhs_triangle' is of type 'triangle'.
Semantic error on line 39: LHS of plus-assignment must be (INT || DOUBLE || STRING).  Variable 'lhs_triangle' is of type 'triangle'.
